project/syntax_tests/tests_input/unit/good/Good42.ty
singleton class StudentFactory { 
    
    functions: {
        getStudent: () -> Student = {
            Student("Mark", 19)
        }
    }
}
