project/syntax_tests/tests_input/unit/bad/Bad57.ty
singleton class Random { 
    
    functions: {
        randomValue: (seed: Int) -> Int = {
            313
        } with values: x: Int = 8; y: Int = 16
    }
}
